<resources>
    <string name="app_name">Uet Hub</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="demo_title">Mời sinh viên tham dự “Hội thảo truyền tải thông tin tuyển dụng của Samsung tới sinh viên”</string>
    <string name="demo_desciption">Thực hiện kế hoạch nhiệm vụ năm học 2017-2018, đồng thời tạo cơ hội việc làm cho sinh viên những năm cuối, Trường ĐH Công nghệ phối hợp với Tập đoàn điện tử Samsung, Samsung Việt Nam tổ chức “Hội thảo Truyền tải thông tin tuyển dụng của Samsung tới sinh viên”. […]</string>
    <string name="new_demo_createTime">06/04/2018</string>
    <string name="demo_news_category">Sinh viên, Thông tin chung, Cơ hội việc l</string>
    <string name="tuy_t_nga">Tuyết Nga</string>
    <string name="trash_1">An toàn và an ninh mạng</string>
    <string name="trash_2">Lên mạng lúc: 2018-03-14 09:19:50</string>

    <!--facebook setup SDK-->
    <string name="facebook_app_id">817344528473651</string>
    <string name="fb_login_protocol_scheme">fb817344528473651</string>

    <string name="avatar">Avatar</string>
    <string name="username_demo">user name</string>
    <string name="fit">FIT</string>
    <string name="fet">FET</string>
    <string name="fepn">FEPN</string>
    <string name="l_ch_thi">Lịch thi</string>
    <string name="result">Kết quả</string>
    <string name="nhantinmoi">Nhận tin mới</string>
    <string name="msv">Mã sinh viên</string>
    <string name="msv2">Mã sinh viên:\u0020</string>
    <string name="mmh">Mã môn học:</string>
    <string name="edit_msv">Sửa</string>
    <string name="_15021169">15021169</string>
    <string name="msv_hint">Mã sinh viên</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shit">Chào mừng bạn đến với UETHUB</string>
    <string name="uet">UET</string>
    <string name="sdb">Số báo danh:\u0020</string>
    <string name="date_exam">Ngày thi:\u0020</string>
    <string name="roomExam">Phòng thi:\u0020</string>
    <string name="typeExam">Hình thức thi:\u0020</string>
    <string name="time_update_form">Cập nhật lúc:\u0020</string>
    <string name="menu_outer_open">Tới thư mục</string>
    <string name="trash_v1">Cập nhật mã sinh viên để nhận thông báo điểm thi nhé</string>

</resources>
