<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">


            <TextView
                android:id="@+id/txtTitle"
                style="@style/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/demo_title" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/newsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="6"
                android:text="@string/demo_desciption" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <ImageView
                    android:id="@+id/imgPublicTime"
                    android:layout_width="@dimen/size_icon_new"
                    android:layout_height="@dimen/size_icon_new"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/clock_circular_outline" />

                <TextView
                    android:id="@+id/txtPublicTime"
                    style="@style/newsPublicTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@+id/imgPublicTime"
                    android:layout_toRightOf="@id/imgPublicTime"
                    android:text="@string/new_demo_createTime" />

                <ImageView
                    android:id="@+id/imgCategories"
                    android:layout_width="@dimen/size_icon_category"
                    android:layout_height="@dimen/size_icon_category"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/txtPublicTime"
                    android:layout_toRightOf="@+id/txtPublicTime"
                    android:src="@drawable/ic_news_category" />

                <TextView
                    android:id="@+id/txtCategories"
                    style="@style/newsPublicTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@+id/imgCategories"
                    android:layout_toRightOf="@+id/imgCategories"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/demo_news_category" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/imgAuthor"
                    android:layout_width="@dimen/size_icon_new"
                    android:layout_height="@dimen/size_icon_new"
                    android:src="@drawable/ic_news_human" />

                <TextView
                    android:id="@+id/txtAuthor"
                    style="@style/newsPublicTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@id/imgAuthor"
                    android:layout_toRightOf="@id/imgAuthor"
                    android:text="@string/tuy_t_nga" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
