<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listgrad_opa">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d21450"
            android:text="@string/logout"
            android:textColor="#ffffff" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnUpdate"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="50dp"
        android:background="#1E88E5"
        android:src="@drawable/ic_float_upgrade"
        android:textColor="#fff"
        app:fabSize="mini" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listgrad"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/avatar"
                android:elevation="10dp"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_toEndOf="@id/imgAvt"
                android:layout_toRightOf="@id/imgAvt"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/textEmailFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nhantinmoi"
            android:textColor="#383838"
            android:textSize="18sp"
            android:textStyle="bold" />

        <include
            layout="@layout/setting_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView_2"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMasinhvien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/msv"
                android:textColor="#383838"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMasinhvien"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/_15021169"
                android:textColor="#383838"
                android:textSize="14sp" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btnEditMsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMasinhvien"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/edit_msv" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
